<resources>
    <string name="app_name">Viaggio</string>
    <string name="tutorial_skip">Skip</string>
    <string name="tutorial_login">Login</string>
    <string name="normal_sign">Login by Email</string>
    <string name="sign_sign_up">Create Account</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_sign">Login</string>
    <string name="sign_up">Create Account</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
</resources>
